--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Colibri_Lessons</string>
+
     <string name="following_hint">Читает</string>
     <string name="followers_hint">Читатели</string>
+
+    <string name="search_query_hint">Введите имя</string>
+    <string name="search">Поиск</string>
+
+    <string name="not_enough_symbols_msg">Введите хотя бы один символ</string>
+    <string name="loading_error_mag">Ошибка при загрузке данных</string>
 </resources>
