--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">Colibri_Lessons</string>
+
     <string name="following_hint">Following</string>
     <string name="followers_hint">Followers</string>
+
+    <string name="search_query_hint">Enter user name</string>
+    <string name="search">Search</string>
+
+    <string name="not_enough_symbols_msg">Please enter at last one symbol</string>
+    <string name="loading_error_mag">Error during loading info</string>
 </resources>
