--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="not_enough_symbols_msg">Please enter at last one symbol</string>
     <string name="loading_error_mag">Error during loading info</string>
+
+    <string name="fa_map_marker"></string>
 </resources>
