--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,8 @@
 
     <string name="not_enough_symbols_msg">Введите хотя бы один символ</string>
     <string name="loading_error_mag">Ошибка при загрузке данных</string>
+
+    <string name="fa_map_marker"></string>
+    <string name="fa_heart_o"></string>
+    <string name="fa_retweet"></string>
 </resources>
